<resources>
    <string name="app_name">智能笔记本</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_note">笔记</string>
    <string name="menu_diary">日记</string>
    <string name="menu_profile">我的</string>
    <string name="menu_schedule">日程</string>
    <string name="menu_statistics">统计</string>
    <string name="menu_backup">备份</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_more">更多</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s 毕业设计专用-底部信息😘.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">关于作者</string>
    <string name="about_item_donation_link">捐赠作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://rainss.cn</string>
    <string name="url_author_github">https://github.com/rainerosion</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>
    <!-- 分类相关的字符 -->
    <string name="menu_type">分类</string>
    <string name="type_add_btn">添加</string>
    <string name="type_cancel_btn">取消</string>
    <string name="content_warning">请填写分类名称！</string>
    <string name="add_type_cancel">分类添加取消！</string>
    <string name="delete">刪除</string>

    <!-- 笔记相关的字符串 -->
    <string name="title_tips">请输入标题</string>
    <string name="type_tips">默认笔记</string>
    <string name="content_tips">请输入内容</string>
    <string name="default_type">默认分类</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_note">NoteActivity</string>

    <string name="menu_info">信息</string>
    <!-- 日记 -->
    <string name="diary_info">日记本</string>
    <string name="diary_version">版本号：2.1.2</string>
    <string name="app_designer">Design By Zain</string>
    <string name="designer_website"><a href="http://izain.info">个人博客</a></string>
    <string name="activity_info_textView_update_logs">更新日志</string>
    <!--
       程序-按钮
    -->
    <string name="insert_date">插入日期</string>
    <string name="diary_lable">标题</string>
    <string name="action_setting">设置</string>
    <string name="insert_diary">新建</string>
    <string name="diary_about">关于</string>
    <string name="diary_exit">退出</string>
    <string name="diary_save">保存</string>
    <string name="diary_update">修改</string>
    <string name="diary_delete">删除</string>
    <string name="diary_label_def">未命名</string>
    <string name="diary_list">返回</string>
    <!--
    	程序-activity的标题
    -->
    <string name="title_activity_list">日记</string>
    <string name="title_activity_insert">新建日记</string>
    <string name="title_activity_detail">日记详情</string>
    <string name="title_activity_update">修改日记</string>
    <string name="title_activity_info">关于</string>
    <string name="search">搜索</string>
    <string name="title_activity_setting">设置</string>
    <!--
        设置页面与日记锁页面
    -->
    <string name="password">123</string>
    <string name="no_found">没有日记！</string>
    <string name="lock_hint">请输入密码</string>
    <string name="lock_button">解锁</string>
    <!--
        更新日志dialog界面
    -->
    <string name="update_logs">
        ------------------v2.1.2----------------\n
        新增垃圾桶，让你可以后悔。\n
        修复bug：\n
        修复搜索出的日记列表中不显示天气心情图标。\n
        2015-4-18 \n
        ------------------v2.1.1----------------\n
        修复bug：\n
        1.修复之前日日记在android4.2版本以下出现FC；\n
        2.修复android4.4版本以下不能更换天气心情表情。\n
        2015-4-14\n
        ------------------v2.1------------------\n
        新增为日记添加心情，天气功能。\n
        泡泡表情更形象。\n
        增加浮动按钮快捷写日记。\n
        数据库结构优化。\n
        2015-4-13\n
        ------------------v2.0------------------\n
        界面完全改版：\n
        实现系统沉浸栏，采用Material Design设计；\n
        采用cyan配色，更加小清新；\n
        实现侧边菜单，更改搜索样式；\n
        还有许多细节改变，请自己体会。\n
        2015-4-10\n
        ------------------v1.6------------------\n
        紧急更新：\n
        将日记数据保存在SD卡上，\n
        防止删除应用后以前写的日记消失，\n
        用户可以自己备份日记数据；\n
        设置中增加查看更新日志按钮；\n
        修复bug：\n
        1. 搜索为空时，“未查找到相应日记”一直出现。\n
        2015-4-9\n
        ------------------v1.5------------------\n
        添加日记查询功能；\n
        添加日记锁，更好的保护隐私；\n
        添加日记锁开关更人性化；\n
        实现日记锁的密码修改。\n
        2015-3-30\n
        ------------------v1.1------------------\n
        添加修改日记功能；\n
        日记列表中显示写下日记的时间；\n
        滚动效果更平滑。\n
        2015-3-28\n
        ------------------v1.0------------------\n
        实现基本功能；\n
        显示日记列表；\n
        日记的新建，删除；\n
        查看日记的详细内容。\n
        2015-3-26
    </string>
    <string name="title_alertDialog">更新日志</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_backup">日记备份</string>

    <string name="hello_world">Hello world!</string>
    <string name="backup_content">
        本日记软件的日记数据保存在SD卡根目录下diary文件夹下；\n
        具体路径“/diary/diary.db3”；\n
        如需备份日记数据，请把diary.db3文件保存在电脑上或者其他安全的地方。\n
        恢复日记时只需将diary.db3文件放在原位置即sd卡中的diary文件夹下，即可恢复。</string>
    <string name="title_activity_trash">垃圾桶</string>
    <string name="trash_delete">清空</string>
    <string name="diary_title">填写一个标题吧</string>
    <string name="diary_content">开始写日记吧</string>
    <string name="select_mood">心情如何？</string>
    <string name="select_weather">天气状况？</string>
    <string name="look_tips">请输入密码才能进入日记模块！</string>

    <!-- 日程 -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">欢迎使用</string>
    <string name="section_one">您可以使用它记笔记</string>
    <string name="section_two">也可以提醒自己</string>
    <string name="section_three">还可以分享到朋友圈</string>
    <string name="onboarding_finish_button_description">Finish</string>
    <string name="onboarding_next_button_description">Next</string>
    <string name="onboarding_pre_button_description">Pre</string>
    <string name="clean">"清除所有数据"</string>
    <string name="about">关于</string>
    <string name="share">分享</string>
    <string name="are_you_sure">确认删除？</string>
    <string name="cancel">取消</string>
    <string name="title">日程标题</string>
    <string name="content">描述信息</string>
    <string name="add_picture">添加照片</string>
    <string name="exit">再按一次，退出程序</string>
    <string name="empty">未添加日程</string>
    <string name="settingtime">请设置时间</string>
    <string name="username">账号</string>

    <string name="menu_chart">统计</string>
</resources>
