<?xml version="1.0" encoding="utf-8"?>
<!--侧边栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_tab"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/vector_drawable_note"
            android:checkable="false"
            android:title="@string/menu_note" />

        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/vector_drawable_diary"
            android:checkable="false"
            android:title="@string/menu_diary" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/vector_drawable_my"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/vector_drawable_schedule"
            android:checkable="false"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_backup"
            android:checkable="false"
            android:icon="@drawable/vector_drawable_backup"
            android:title="@string/menu_backup"/>

    </group>

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_type"
            android:checkable="false"
            android:icon="@drawable/vector_drawable_type"
            android:title="@string/menu_type" />

<!--        <item-->
<!--            android:id="@+id/nav_notifications"-->
<!--            android:checkable="false"-->
<!--            android:icon="@drawable/ic_menu_notifications"-->
<!--            android:title="@string/menu_notifications" />-->

<!--        <item-->
<!--            android:id="@+id/nav_starred"-->
<!--            android:checkable="false"-->
<!--            android:icon="@drawable/ic_menu_star"-->
<!--            android:title="@string/menu_starred" />-->
    </group>

    <group
        android:id="@+id/setting"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>


</menu>
