<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/mytoolbar" />

    <TextView
        android:id="@+id/activity_insert_textView_diarylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/edit_diarylabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/diary_title"
        android:inputType="text"
        android:singleLine="true" />
    <LinearLayout
        android:id="@+id/select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_diarylabel"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_mood"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:id="@+id/mood"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_weather"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:id="@+id/weather"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_diarycontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/select_layout"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:scrollbars="vertical"
        android:hint="@string/diary_content"/>
</RelativeLayout>