<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_note_add">

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/title_tips"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/grey_700"
        android:padding="@dimen/activity_margin_16"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_margin_16"
        android:paddingRight="@dimen/activity_margin_16"
        android:paddingBottom="@dimen/activity_margin_16">

        <TextView
            android:id="@+id/note_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/grey_500"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:text="2018-11-16 02:31"/>

        <TextView
            android:id="@+id/note_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/grey_500"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="@string/type_tips"/>
    </RelativeLayout>

    <com.sendtion.xrichtext.RichTextEditor
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rt_editor_image_bottom="10"
        app:rt_editor_image_height="500"
        app:rt_editor_text_color="@color/grey_900"
        app:rt_editor_text_init_hint="@string/content_tips"
        app:rt_editor_text_line_space="6dp"
        app:rt_editor_text_size="16sp" />

</LinearLayout>
